[package]
name = "more-jpeg"
version = "0.1.0"
authors = ["Fernando Paredes <nano@fdp.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.11.0"
liquid = "0.20.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
thiserror = "1.0.20"
base64 = "0.12.3"
serde = "1.0.114"
serde_json = "1.0.56"
image = "0.23.6"
ulid = "0.4.0"
rand = "0.7.3"

tokio = { version = "0.2.21", features = ["sync", "rt-core", "rt-util", "rt-threaded", "macros", "fs"] }
warp = "0.2.3"
http = "0.2.1"

[profile.dev.package."*"]
opt-level = 2
